Details

    • 1
    • KV Sprint 2020-April

    Description

      During the mad-hatter -> master merge (http://review.couchbase.org/c/kv_engine/+/129608/1) a build break was introduced on server.jenkins builds (all but macOS), but the CV builds all passed (including Linux variants).

      To fix this asap the "backfill_order" stat was removed.

      We need to determine the reason why this broke master (and not CV), and restore the stat.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty