MB-39725: Fix build break with backfill_order stat

Fix build break seen in master merge (8baa2ca58) by temporarily
disabling the 'backfill_order' stat:

    /usr/bin/ld: ../CMakeFiles/ep_objs.dir/src/dcp/backfill-manager.cc.o: in function `BackfillManager::addStats(DcpProducer&, std::function<void (std::basic_string_view<char, std::char_traits<char> >, std::basic_string_view<char, std::char_traits<char> >, gsl::not_null<void const*>)> const&, void const*)':
    /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/src/dcp/backfill-manager.cc:129: undefined reference to `void ConnHandler::addStat<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > >(char const*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::function<void (std::basic_string_view<char, std::char_traits<char> >, std::basic_string_view<char, std::char_traits<char> >, gsl::not_null<void const*>)> const&, void const*) const'

Change-Id: Iacb7cf13a35f567ffe9106136cea48eb4e26279c
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/129737
Tested-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>